@@ -61,7 +61,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot
             + "/jsp/test.jsp";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
 
         int code = conn.getResponseCode();
         if (code != 200) {
