@@ -62,7 +62,7 @@ public class WebTest {
 
     public void invokeJsp() throws Exception {
         String url = "http://" + host + ":" + port + contextRoot + "/jsp/test.jsp";
-        HttpURLConnection conn = (HttpURLConnection) (new URL(url)).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
 
         int code = conn.getResponseCode();
         if (code != 200) {
