@@ -68,7 +68,7 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + "/mywar/test.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + "/mywar/test.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
