@@ -83,7 +83,7 @@ public class WebTest {
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -132,7 +132,7 @@ is));
     public void doTest2(String path, String testName) {
 
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -155,8 +155,8 @@ is));
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot
- + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot
+ + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -208,8 +208,8 @@ is));
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot
- + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot
+ + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
